Fixed action buttons visibility on  block with image

--- a/src/assets/scss/components/sections/project-page-editor-view/page-block.scss
+++ b/src/assets/scss/components/sections/project-page-editor-view/page-block.scss
@@ -9,7 +9,7 @@
     .page-block__edit-content-button,
     .page-block__add-block-button,
     .page-block__block-actions {
-      opacity: 0.3;
+      opacity: 0.5;
     }
   }
 }
@@ -66,6 +66,7 @@
   display: flex;
   align-items: center;
 
+  background-color: $color-secondary;
   opacity: 0;
 
   .button {
@@ -78,7 +79,7 @@
     }
 
     svg {
-      color: $color-secondary;
+      color: $text-secondary;
 
       transition: color $transition-default;
     }
